tests/tests/snapshots/system_program__allocate_and_assign_table.snap
---
source: tests/tests/system_program.rs
expression: stripped
---
┌──────────────────────────────────────────────────────────── Transaction #1 ─────────────────────────────────────────────────────────────┐
│ Transaction: 3zGKLXetKEyijAgXUvdNwJtqDLkBGYQxFUZDZskgeBddNiY6kpNgmm5vf6YDvZZx9a5Srkarc8Jeao82NehX5Lcm | Slot: 0 | Status: Success
│ Fee: 0.000010 SOL | Compute Used: 300/1400000 CU
│
│ Instructions (2):
│
│ ├─ #1 11111111111111111111111111111111 (System Program) - Allocate
│ │    space: 200
│ │  Accounts (1):
│ │  +----+----------------------------------------------+-----------------+---------+-------+----------+----------+--------+
│ │  | #  | Account                                      | Type            | Name    | Owner | Data Len | Lamports | Change |
│ │  +----+----------------------------------------------+-----------------+---------+-------+----------+----------+--------+
│ │  | #1 | 8SFqwqnq4whPhs8icwHA2hQg3hUoN1qrCLK1SBx3WKwe | signer+writable | account | 11111 | 0        | 0        | 0      |
│ │  +----+----------------------------------------------+-----------------+---------+-------+----------+----------+--------+
│ ├─ #2 11111111111111111111111111111111 (System Program) - Assign
│ │  Accounts (1):
│ │  +----+----------------------------------------------+-----------------+---------+-------+----------+----------+--------+
│ │  | #  | Account                                      | Type            | Name    | Owner | Data Len | Lamports | Change |
│ │  +----+----------------------------------------------+-----------------+---------+-------+----------+----------+--------+
│ │  | #1 | 8SFqwqnq4whPhs8icwHA2hQg3hUoN1qrCLK1SBx3WKwe | signer+writable | account | 11111 | 0        | 0        | 0      |
│ │  +----+----------------------------------------------+-----------------+---------+-------+----------+----------+--------+

│ Program Logs:
│
│ Program 11111111111111111111111111111111 invoke [1]
│ Program 11111111111111111111111111111111 success
│ Program 11111111111111111111111111111111 invoke [1]
│ Program 11111111111111111111111111111111 success
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
