tests/tests/snapshots/system_program__create_account_table.snap
---
source: tests/tests/system_program.rs
expression: stripped
---
┌──────────────────────────────────────────────────────────── Transaction #1 ─────────────────────────────────────────────────────────────┐
│ Transaction: 5ix5brBTwq7K9Zinf7zUZpHuzr6C3K6uQ4jr4gFoBny3q6Jy8Qz42ij4o1xoWbCiGXEZkUArgokMmHBe4J9Cr2NH | Slot: 0 | Status: Success
│ Fee: 0.000010 SOL | Compute Used: 150/1400000 CU
│
│ Instructions (1):
│
│ ├─ #1 11111111111111111111111111111111 (System Program) - CreateAccount
│ │    lamports: 1000000000
│ │    space: 100
│ │  Accounts (2):
│ │  +----+----------------------------------------------+-----------------+-----------------+-------+----------+----------------+----------------+
│ │  | #  | Account                                      | Type            | Name            | Owner | Data Len | Lamports       | Change         |
│ │  +----+----------------------------------------------+-----------------+-----------------+-------+----------+----------------+----------------+
│ │  | #1 | AKnL4NNf3DGWZJS6cPknBuEGnVsV4A4m5tgebLHaRSZ9 | signer+writable | funding_account | 11111 | 0        | 10,000,000,000 | -1,000,010,000 |
│ │  +----+----------------------------------------------+-----------------+-----------------+-------+----------+----------------+----------------+
│ │  | #2 | GyGKxMyg1p9SsHfm15MkNUu1u9TN2JtTspcdmrtGUdse | signer+writable | new_account     | 11111 | 0        | 0              | +1,000,000,000 |
│ │  +----+----------------------------------------------+-----------------+-----------------+-------+----------+----------------+----------------+

│ Program Logs:
│
│ Program 11111111111111111111111111111111 invoke [1]
│ Program 11111111111111111111111111111111 success
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
