tests/tests/snapshots/system_program__transfer_table.snap
---
source: tests/tests/system_program.rs
expression: stripped
---
┌──────────────────────────────────────────────────────────── Transaction #1 ─────────────────────────────────────────────────────────────┐
│ Transaction: 35wnxL2yTyeTbFj2FnCreVcJHgDAXz3frvWfbKeRM87hBgbmo7fcKvT6Js2wGgMi5WApxQrNvsZgtZpUc5wnSQkR | Slot: 0 | Status: Success
│ Fee: 0.000005 SOL | Compute Used: 150/1400000 CU
│
│ Instructions (1):
│
│ ├─ #1 11111111111111111111111111111111 (System Program) - Transfer
│ │    lamports: 1000000000
│ │  Accounts (2):
│ │  +----+----------------------------------------------+-----------------+------+-------+----------+----------------+----------------+
│ │  | #  | Account                                      | Type            | Name | Owner | Data Len | Lamports       | Change         |
│ │  +----+----------------------------------------------+-----------------+------+-------+----------+----------------+----------------+
│ │  | #1 | AKnL4NNf3DGWZJS6cPknBuEGnVsV4A4m5tgebLHaRSZ9 | signer+writable | from | 11111 | 0        | 10,000,000,000 | -1,000,005,000 |
│ │  +----+----------------------------------------------+-----------------+------+-------+----------+----------------+----------------+
│ │  | #2 | 9hSR6S7WPtxmTojgo6GG3k4yDPecgJY292j7xrsUGWBu | writable        | to   | 11111 | 0        | 0              | +1,000,000,000 |
│ │  +----+----------------------------------------------+-----------------+------+-------+----------+----------------+----------------+

│ Program Logs:
│
│ Program 11111111111111111111111111111111 invoke [1]
│ Program 11111111111111111111111111111111 success
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
